<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#DD000000"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location_improve_accuracy"/>

    <TextView
        android:layout_marginTop="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#89000000"
        android:textSize="16sp"
        android:fontFamily="sans-serif"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location_changesetting"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="21dp"
        android:layout_marginBottom="24dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_location"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="#89000000"
                android:textSize="16sp"
                android:fontFamily="sans-serif"
                android:text="@string/location_usegps"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>