<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/compass_window_background"
    >
    <FrameLayout
        android:id="@+id/real"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">
        <SurfaceView
            android:id="@+id/SurfaceView"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal" />
    </FrameLayout>



    <RelativeLayout
        android:id="@+id/compass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/compass_window_background">
        <RelativeLayout
            android:id="@+id/dialContainer"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:layout_centerInParent="true">
            <ImageView
                android:id="@+id/dial"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:layout_centerInParent="true"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/dial_pointer_white" />

            <ImageView
                android:id="@+id/calibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:src="@drawable/calibrate_dark"
                android:visibility="gone" />

            <RelativeLayout
                android:id="@+id/degreeBg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/dial_bg_a"
                android:layout_centerInParent="true">

                <com.example.compass.Floatview
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:adjustViewBounds="true"
                    android:layout_centerInParent="true"
                    android:id="@+id/floatview" />
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/textDirection"
        android:layout_marginTop="20dp"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/degreenNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:textColor="#f44336"
                android:text="0°"
                android:textSize="@dimen/text_size_textDirection" />
            <TextView
                android:id="@+id/lable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/degreenNumber"
                android:layout_alignTop="@id/degreenNumber"
                android:layout_toRightOf="@id/degreenNumber"
                android:textColor="#f44336"
                android:text="N"
                android:singleLine="true"
                android:textSize="@dimen/text_size_textDirection" />
        </LinearLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/leftArrow"
        android:visibility="gone"
        android:scaleType="center"
        android:src="@drawable/arrow_n_l"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginLeft="16dp"
        android:layout_alignBottom="@id/textDirection"
        android:layout_alignTop="@id/textDirection"
        android:layout_alignParentLeft="true"/>
    <TextView
        android:id="@+id/leftArrowDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="N"
        android:visibility="gone"
        android:textSize="@dimen/text_size_direction"
        android:textColor="@color/compass_direction"
        android:layout_marginLeft="5dp"
        android:gravity="center_vertical"
        android:layout_alignBottom="@id/textDirection"
        android:layout_alignTop="@id/textDirection"
        android:layout_toRightOf="@+id/leftArrow"
        />
    <TextView
        android:id="@+id/rightArrowDirection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="N"
        android:visibility="gone"
        android:textSize="@dimen/text_size_direction"
        android:layout_marginRight="5dp"
        android:textColor="@color/compass_direction"
        android:gravity="center_vertical"
        android:layout_alignBottom="@id/textDirection"
        android:layout_alignTop="@id/textDirection"
        android:layout_toLeftOf="@+id/rightArrow"
        />
    <ImageView
        android:id="@+id/rightArrow"
        android:visibility="gone"
        android:src="@drawable/arrow_n_r"
        android:scaleType="center"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:layout_marginRight="16dp"
        android:layout_alignBottom="@id/textDirection"
        android:layout_alignTop="@id/textDirection"
        android:layout_alignParentRight="true"/>
    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_black"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textLocation"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:gravity="center"
                android:lineSpacingExtra="8dp"
                android:clickable="true"
                android:onClick="openGps"
                android:text="@string/xxhdpi_prompt"
                android:textSize="16sp"
                android:textColor="@color/real_mode_location"
                /><!-- 1121364 -xing.zhao, modify -001 , begin-->

            <LinearLayout
                android:id="@+id/refresh_textLocation_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="20dp"
                android:paddingBottom="17dp"
                android:visibility="gone"
                android:paddingTop="3dp"
                android:clickable="true"
                >
                <ImageView
                    android:id="@+id/refresh_textLocation"
                    android:layout_alignBottom="@+id/textLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    android:src="@drawable/ic_refresh_snackbar"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/locationInfoArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">
            <LinearLayout
                android:id="@+id/locationInfo"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="30dp"
                    >
                    <TextView
                        android:id="@+id/longitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/LON"
                        android:textColor="@color/compass_gps_info"
                        android:textSize="@dimen/text_size_gpsInfo"/>
                    <TextView
                        android:id="@+id/longitudeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/compass_gps_info_value"
                        android:textSize="@dimen/text_size_gpsInfo"/>
                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="30dp"
                    >
                    <TextView
                        android:id="@+id/latitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/LAT"
                        android:textColor="@color/compass_gps_info"
                        android:textSize="@dimen/text_size_gpsInfo"/>
                    <TextView
                        android:id="@+id/latitudeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/compass_gps_info_value"
                        android:textSize="@dimen/text_size_gpsInfo"/>
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/altitudeAndbaroInfo"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="30dp"
                    >
                    <TextView
                        android:layout_marginTop="20dp"
                        android:id="@+id/altitude"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ALTI"
                        android:textColor="@color/compass_gps_info"
                        android:textSize="@dimen/text_size_gpsInfo"/>
                    <TextView
                        android:id="@+id/altitudValue"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/compass_gps_info_value"
                        android:textSize="@dimen/text_size_gpsInfo"/>


                    <LinearLayout
                        android:id="@+id/layout_refresh1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:paddingLeft="10dp"
                        android:paddingRight="30dp"
                        android:paddingBottom="17dp"
                        android:paddingTop="15dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:clickable="true"
                        >
                        <ImageView
                            android:id="@+id/refresh_altitude"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:visibility="gone"
                            android:layout_gravity="center_vertical"
                            android:src="@drawable/ic_refresh_normal"
                            />
                    </LinearLayout>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="30dp"
                    >
                    <TextView
                        android:id="@+id/baro"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/BARO"
                        android:textColor="@color/compass_gps_info"
                        android:textSize="@dimen/text_size_gpsInfo"/>
                    <TextView
                        android:id="@+id/baroValue"
                        android:layout_marginTop="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/compass_gps_info_value"
                        android:textSize="@dimen/text_size_gpsInfo"/>

                    <LinearLayout
                        android:id="@+id/layout_refresh2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:paddingLeft="10dp"
                        android:paddingRight="30dp"
                        android:paddingBottom="17dp"
                        android:paddingTop="15dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center_vertical"
                        android:clickable="true"
                       >
                        <ImageView
                            android:id="@+id/refresh_baroValue"
                            android:layout_width="wrap_content"
                            android:visibility="gone"
                            android:layout_gravity="center_vertical"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_refresh_normal"
                            />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textCalibrateDes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:gravity="center"
            android:text="@string/note"
            android:textColor="@color/text_normal"
            android:textSize="16sp"
            android:visibility="gone" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/address"
        android:visibility="gone"
        android:layout_above="@id/footer"
        android:layout_centerVertical="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="60dp"
        android:orientation="vertical">
        <TextView
            android:padding="0dp"
            android:id="@+id/locality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/real_mode_fon"
            android:textSize="32sp"
            />
        <TextView
            android:layout_marginTop="10dp"
            android:padding="0dp"
            android:id="@+id/thoroughfare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/real_mode_fon"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/subLocality"
            android:layout_marginTop="10dp"
            android:padding="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/real_mode_fon"
            android:textSize="14sp"
            />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:id="@+id/ll_permisstionWarning"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:background="#333333">
            <TextView
                android:id="@+id/tv_permiss_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="left|center_vertical"
                android:textColor="#ffffff"
                android:textSize="14sp"
                android:layout_marginTop="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/turn_camera_comment"
                />
            <Button
                android:id="@+id/bt_permiss_setting"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/settings"
                android:textColor="#eefb22"
                android:textSize="14sp"
                android:layout_marginRight="24dp"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:layout_gravity="right"
                android:onClick="gotoSettings"/>
        </LinearLayout>
    </RelativeLayout>
    <include
        android:id="@+id/ll_dilog_try_realview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_alignParentBottom="true"
        layout="@layout/dilog_try_realview">
    </include>

</RelativeLayout>